[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.46.1"
euclid = "0.22.9"
fnv = "1.0.7"
num = { version = "0.4.1", features = ["num-bigint", "std"] }
petgraph = "0.6.4"
regex = "1.10.2"
smtlib = { version = "0.1.8", features = ["z3"] }
